--- a/Lab1_BasicClassifications(1).ipynb
+++ b/Lab1_BasicClassifications(1).ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# iris = pd.read_csv('./datasets/iris.csv')\n",
-    "testing = pd.read_csv(\"D:\\\\temp\\\\IOT_dataset\\\\CICIoT2023\\\\part-00000-363d1ba3-8ab5-4f96-bc25-4d5862db7cb9-c000.csv\")\n",
+    "testing = pd.read_csv(\"./datasets/part-00000-363d1ba3-8ab5-4f96-bc25-4d5862db7cb9-c000.csv\")\n",
     "# Read all csv files in the CICIoT2023 folder\n",
     "# import glob\n",
     "# path = r'D:\\\\temp\\\\IOT_dataset\\\\CICIoT2023'\n",
